# aliya

./: .clns  .gitignore  Makefile  Pipfile  README.md  README.org  aliya.asd  setup.cfg  setup.py
app/setup/: linux.sh  windows.ps1
docs/: develop.org
etc/: aliya  entry  gitconfig  pam_environment  profile  profile.ps1  requirements.txt  zshrc
etc/alacritty/: alacritty.yml
etc/jupyter/: jupyter_lab_config.py
etc/liray/: template.json
roswell/: aliya.ros
script/: setup.sh
scripts/: rosw.ros
src/: aliya.lisp  app.lisp  application.lisp  clish.lisp  core.lisp  main.lisp  package.lisp  system.lisp  util.lisp
src/aliya/: __init__.py  __main__.py  cli.py
src/tool/: liray.lisp
systems/aliya/: Makefile  README.org  aliya.asd
systems/aliya/roswell/: aliya.ros
systems/aliya/src/: main.lisp
systems/aliya/tests/: main.lisp
systems/clish/: .gitignore  Makefile  README.org  clish.asd
systems/clish/roswell/: clish.ros  rosw.ros
systems/clish/src/: cli.lisp  config.lisp  core.lisp  package.lisp  repl.lisp  utils.lisp
systems/clish/tests/: clish.lisp  repl.lisp
systems/cln/: README.org  cln.asd
systems/cln/roswell/: cln.ros
systems/cln/src/: main.lisp
systems/cln/tests/: main.lisp
systems/emacy/src/: emacy.lisp
systems/likit/: Makefile  README.org  likit.asd
systems/likit/src/: config.lisp  (+6 more)
systems/lisql/: README.markdown  README.org  lisql.asd
systems/loong/: README.org  loong.asd
systems/malth/: Makefile  README.org  malth.asd
systems/ust/: Makefile  README.org  ust.asd
tests/: aliya.lisp  main.lisp
utils/setup/: windows.ps1
(+11 files in other folders)
