[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "aliya"
version = 0.0.1

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
include = aliya

[options.entry_points]
console_scripts =
    aliya = aliya:main
